swagger annotations bug fixed
it was necessary to redo the annotations so that Example Value was in the form of an array of objects
